--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -76,16 +76,16 @@
 
 .log-in {
   display: flex;
-  width: 20%;
+  width: 15%;
   height: 50px;
-  justify-content: space-evenly;
   align-items: center;
+  position: relative;
 
 }
 
 .profile-name {
   display: flex;
-  width: 60%;
+  width: 100%;
   height: 50px;
   justify-content: space-evenly;
   align-items: center;
@@ -97,6 +97,8 @@
   border: none;
   cursor: pointer;
   outline: none;
+  position: relative;
+  top: -10px;
 }
 .profile-name h5, .log-in h5 {
   font-size: 12pt;
@@ -106,4 +108,37 @@
   display: inline-block;
   border-radius: 50%;
   height: 60%;
+}
+
+.modal-logout {
+  position: absolute;
+  top: 82%;
+  right: 5px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(46, 46, 46);
+  z-index: 9999;
+  transition: 250ms;
+  opacity: 1;
+  border-radius: 30px;
+}
+
+.dis-none {
+  opacity: 0;
+  z-index: -3;
+  transition: 250ms;
+}
+.modal-logout:hover {
+
+  background-color: rgb(61, 61, 61);
+  transition: 250ms;
+}
+
+
+@media screen and (max-width: 650px) {
+
+ .header {
+   display: none;
+ }
+
 }
